RESOLVED FIXED 124733
It should be possible for a LinkBuffer to outlive the MacroAssembler and still be useful
https://bugs.webkit.org/show_bug.cgi?id=124733
Summary It should be possible for a LinkBuffer to outlive the MacroAssembler and stil...
Filip Pizlo
Reported 2013-11-21 12:07:25 PST
Patch forthcoming.
Attachments
work in progress (7.30 KB, patch)
2013-11-21 12:17 PST, Filip Pizlo
no flags
work in progress (7.35 KB, patch)
2013-11-21 12:37 PST, Filip Pizlo
no flags
the patch (7.35 KB, patch)
2014-01-09 16:03 PST, Filip Pizlo
no flags
Patch (7.39 KB, patch)
2014-02-21 18:34 PST, Filip Pizlo
no flags
Patch (8.70 KB, patch)
2014-02-21 18:36 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2013-11-21 12:17:35 PST
Created attachment 217591 [details] work in progress
Filip Pizlo
Comment 2 2013-11-21 12:37:21 PST
Created attachment 217599 [details] work in progress
Filip Pizlo
Comment 3 2014-01-09 16:03:19 PST
Created attachment 220782 [details] the patch
WebKit Commit Bot
Comment 4 2014-01-09 16:06:57 PST
Attachment 220782 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/assembler/ARM64Assembler.h', u'Source/JavaScriptCore/assembler/ARMv7Assembler.h', u'Source/JavaScriptCore/assembler/AssemblerBuffer.h', u'Source/JavaScriptCore/assembler/LinkBuffer.h', u'Source/JavaScriptCore/assembler/MacroAssemblerARM64.h', u'Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h', '--commit-queue']" exit_code: 1 ERROR: Source/JavaScriptCore/assembler/AssemblerBuffer.h:65: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 5 2014-02-21 18:34:58 PST
Filip Pizlo
Comment 6 2014-02-21 18:36:00 PST
WebKit Commit Bot
Comment 7 2014-02-21 18:37:39 PST
Attachment 224941 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/AssemblerBuffer.h:65: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 8 2014-02-22 11:50:25 PST
Benjamin Poulain
Comment 10 2014-07-13 19:13:59 PDT
(In reply to comment #9) > Looks like this was 7-10% regression on Dromaeo/dom-query? > > https://perf.webkit.org/#mode=charts&chartList=%5B%5B%22mac-mavericks%22%2C%22Dromaeo%2Fdom-query%3ARuns%22%5D%2C%5B%22mac-mountainlion%22%2C%22Dromaeo%2Fdom-query%3ARuns%22%5D%5D&days=63&zoom=%5B1392794639427.6333%2C1393190255845.2073%5D I looked into this today, this regression is very bad for PLT on ARM. I have started fixing in https://bugs.webkit.org/show_bug.cgi?id=134659. I'll finish that tomorrow when I have access to all the hardware.
Note You need to log in before you can comment on or make changes to this bug.