It should be possible for a LinkBuffer to outlive the MacroAssembler and still be useful https://bugs.webkit.org/show_bug.cgi?id=124733

Reviewed by Oliver Hunt.

This also takes the opportunity to de-duplicate some branch compaction code.

* assembler/ARM64Assembler.h:
* assembler/ARMv7Assembler.h:
(JSC::ARMv7Assembler::buffer):
* assembler/AssemblerBuffer.h:
(JSC::AssemblerData::AssemblerData):
(JSC::AssemblerBuffer::AssemblerBuffer):
(JSC::AssemblerBuffer::storage):
(JSC::AssemblerBuffer::grow):
* assembler/LinkBuffer.h:
(JSC::LinkBuffer::LinkBuffer):
(JSC::LinkBuffer::executableOffsetFor):
(JSC::LinkBuffer::applyOffset):
* assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::link):
* assembler/MacroAssemblerARMv7.h:



Canonical link: https://commits.webkit.org/147256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164548 268f45cc-cd09-0410-ab3c-d52691b4dbfc